@@ -74,9 +74,32 @@ public class EmployeeService {
     }
   }
 
-  public String executeCommand(String command) {
+  /**
+   * List of allowed commands that can be safely executed.
+   */
+  private static final java.util.Map<String, String[]> ALLOWED_COMMANDS = new java.util.HashMap<>();
+  
+  static {
+    // Define allowed commands with their arguments
+    ALLOWED_COMMANDS.put("ls", new String[]{"ls", "-la"});
+    ALLOWED_COMMANDS.put("pwd", new String[]{"pwd"});
+    ALLOWED_COMMANDS.put("echo", new String[]{"echo", "Hello World"});
+    ALLOWED_COMMANDS.put("date", new String[]{"date"});
+    // Add more allowed commands as needed
+  }
+  
+  /**
+   * Validates if a command is in the allowlist and executes it safely.
+   */
+  private String validateAndExecuteCommand(String commandKey) {
+    if (!ALLOWED_COMMANDS.containsKey(commandKey)) {
+      return "Command not allowed. Allowed commands are: " + String.join(", ", ALLOWED_COMMANDS.keySet());
+    }
+    
     try {
-      Process process = Runtime.getRuntime().exec(command);
+      String[] commandArray = ALLOWED_COMMANDS.get(commandKey);
+      ProcessBuilder processBuilder = new ProcessBuilder(commandArray);
+      Process process = processBuilder.start();
 
       BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
       StringBuilder output = new StringBuilder();
@@ -96,5 +119,9 @@ public class EmployeeService {
     } catch (Exception e) {
       return "Error executing command: " + e.getMessage();
     }
+  }
+  
+  public String executeCommand(String command) {
+    return validateAndExecuteCommand(command);
   }
 }
